# practica-1-classes-opengl

./: .gitignore  README.md
ejercicio_1/: CMakeLists.txt  README.md
ejercicio_1/files/input/: batallas.txt
ejercicio_1/include/: Batalla.h  Torneo.h
ejercicio_1/include/io_files/: Escritura.h  Lectura.h
ejercicio_1/include/monsters/: Dragon.h  Esqueleto.h  Hechicero.h  Monstruo.h  Orco.h  Troll.h  Vampiro.h
ejercicio_1/src/: Batalla.cpp  Main.cpp  Torneo.cpp
ejercicio_1/src/files/input/: torneo.txt
ejercicio_1/src/include/: Batalla.h  Torneo.h
ejercicio_1/src/include/io_files/: Escritura.h  Lectura.h
ejercicio_1/src/include/monsters/: Dragon.h  Esqueleto.h  Hechicero.h  Monstruo.h  Orco.h  Troll.h  Vampiro.h
ejercicio_1/src/io_files/: Escritura.cpp  Lectura.cpp
ejercicio_2/: CMakeLists.txt  README.md
ejercicio_2/include/: App.h  Compiler.h  Draw.h  Window.h
ejercicio_2/shader/: fragment_shader.glsl  vertex_shader.glsl
ejercicio_2/src/: App.cpp  Compiler.cpp  Draw.cpp  Main.cpp  Window.cpp
